--- a/data/sources/datascript-morning-talks.yaml
+++ b/data/sources/datascript-morning-talks.yaml
@@ -51592,3 +51592,27 @@ series:
         url: https://www.meetup.com/morning-talks/events/290691506/
         dtstart: 2023-02-08 09:00:00+01:00
         dtend: 2023-02-08 10:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Představení moderních linuxových kontejnerů pomocí nástrojů Podman a Buildah
+        description: 'Morning Talks
+
+          Wednesday, February 8 at 9:00 AM
+
+
+          **Prosíme Vás o registraci přímo na stránkách Datascriptu:**https://www.datascript.cz/morning-talks/predstaveni-modernich-linuxovych-kontejneru-pomoci...
+
+
+          https://www.meetup.com/morning-talks/events/290691506/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290691506@meetup.com
+        url: https://www.meetup.com/morning-talks/events/290691506/
+        dtstart: 2023-02-08 09:00:00+01:00
+        dtend: 2023-02-08 10:00:00+01:00
