--- a/data/sources/pyvo-praha.yaml
+++ b/data/sources/pyvo-praha.yaml
@@ -11338,9 +11338,9 @@ series:
         dtstart: 2022-09-21 19:00:00+02:00
         dtend: 2022-09-21 23:59:00+02:00
   - meetupcom:
-      meta_description: We organize Pyvo in February as well! We meet up at 19 at Klub Na Věnečku, presentations start at 19.30. You can look forward to 3 presentations, lightning talks and chit-c
-      og_title: 'Pyvo Prague #141 - Asyncio, Tech interview, Lunch break problem, Wed, Feb 15, 2023, 7:00 PM   | Meetup'
-      url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssyfcdbtb/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: 'Pyvo Prague #141 - Asyncio, Tech interview, Lunch break problem'
         description: 'Pyvo: Prague Python Meetup
@@ -19689,3 +19689,26 @@ series:
         url: https://www.meetup.com/pyvo-prague-python-meetup/events/290046650/
         dtstart: 2023-01-18 19:00:00+01:00
         dtend: 2023-01-18 23:59:00+01:00
+  - meetupcom:
+      meta_description: We will meet for an informal chat about Python, programming, and more. Details will be added.
+      og_title: 'Pyvo Prague #, Wed, Jun 21, 2023, 7:00 PM   | Meetup'
+      url: https://www.meetup.com/pyvo-prague-python-meetup/events/rrlcctyfcjbcc/
+      ical:
+        summary: 'Pyvo Prague #'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, June 21 at 7:00 PM
+
+          \nWe will meet for an informal chat about Python, programming, and more. Details will be added.
+
+
+          https://www.meetup.com/pyvo-prague-python-meetup/events/rrlcctyfcjbcc/'
+        location: Klub Na Věnečku (Ostrovského 38a, Praha 5, Czech Republic 150 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_rrlcctyfcjbcc@meetup.com
+        url: https://www.meetup.com/pyvo-prague-python-meetup/events/rrlcctyfcjbcc/
+        dtstart: 2023-06-21 19:00:00+02:00
+        dtend: 2023-06-21 23:59:00+02:00
