--- a/data/sources/datascript-morning-talks.yaml
+++ b/data/sources/datascript-morning-talks.yaml
@@ -50106,14 +50106,9 @@ series:
         dtstart: 2023-01-18 09:00:00+01:00
         dtend: 2023-01-18 10:00:00+01:00
   - meetupcom:
-      meta_description: '**Prosíme Vás o registraci přímo na stránkách Datascriptu:**
-
-        https://www.datascript.cz/morning-talks/atlassian-cloud-ci-data-centre-to-je-oc-tu-bezi/
-
-
-        Atlassian před časem '
-      og_title: Atlassian - Cloud či Data Centre, to je oč tu běží, Thu, Feb 16, 2023, 9:00 AM   | Meetup
-      url: https://www.meetup.com/morning-talks/events/290691633/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Atlassian - Cloud či Data Centre, to je oč tu běží
         description: 'Morning Talks
