--- a/data/sources/strv.yaml
+++ b/data/sources/strv.yaml
@@ -38111,3 +38111,26 @@ series:
         url: https://www.meetup.com/strv-meetups/events/291307706/
         dtstart: 2023-02-14 18:00:00+01:00
         dtend: 2023-02-14 22:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: (BRNO) React Native Meetup
+        description: 'STRV Meetups
+
+          Tuesday, February 14 at 6:00 PM
+
+
+          **(https://www.eventbrite.com/e/529055237457)** After a long time, the STRV Frontend team is organizing a meetup solely focused on React Native. Over ...\n
+
+          https://www.meetup.com/strv-meetups/events/291307706/'
+        location: STRV (Přízova 284/5, Brno-střed, Czech Republic 602 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_291307706@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/291307706/
+        dtstart: 2023-02-14 18:00:00+01:00
+        dtend: 2023-02-14 22:00:00+01:00
