data: cron update

--- a/data/sources/pehapkari-cz.yaml
+++ b/data/sources/pehapkari-cz.yaml
@@ -30222,3 +30222,99 @@ series:
         url: https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/288964390/
         dtstart: 2022-10-25 18:00:00+02:00
         dtend: 2022-10-25 23:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: '55. sraz přátel PHP: Bezpečnější SQL (ShipMonk, Praha)'
+        description: 'Pražské srazy přátel PHP - Pehapkari.cz
+
+          Thursday, February 16 at 5:30 PM
+
+
+          Zveme vás na pravidelné setkání přátel PHP v Praze, tentokrát v karlínských kancelářích ShipMonk. Tématem večera bude práce s SQL databázemi v PHP, mi...
+
+
+          https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/291079064/'
+        location: ShipMonk R&D (Rohanské nábř. 23, Karlín, Praha-Praha 8, Czech Republic 186 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_291079064@meetup.com
+        url: https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/291079064/
+        dtstart: 2023-02-16 17:30:00+01:00
+        dtend: 2023-02-16 23:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 54. sraz přátel PHP v Košík.cz v Praze
+        description: 'Pražské srazy přátel PHP - Pehapkari.cz
+
+          Thursday, January 19 at 6:00 PM
+
+
+          Zveme vás na první setkání přátel PHP po Novém roce, tentokrát v kancelářích Košík.cz. Těšit se můžete na zajímavé přednášky, chutné občerstvení po ce...
+
+
+          https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/290273157/'
+        location: Kosik.cz s.r.o. (Evropská 11/2758, Praha 6, Czech Republic 160 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290273157@meetup.com
+        url: https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/290273157/
+        dtstart: 2023-01-19 18:00:00+01:00
+        dtend: 2023-01-19 23:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 53. sraz přátel PHP v Ecomailu v Praze
+        description: 'Pražské srazy přátel PHP - Pehapkari.cz
+
+          Thursday, December 1 at 6:00 PM
+
+
+          Zveme vás na poslední letošní setkání přátel PHP, tentokrát v kancelářích Ecomailu v centru Prahy. Náš partner si pro nás připravil zajímavé přednášky...
+
+
+          https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/289395420/'
+        location: Ecomail.cz s.r.o. (Na Zderaze 15, Nové Město, Praha-Praha 2, Czech Republic 120 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289395420@meetup.com
+        url: https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/289395420/
+        dtstart: 2022-12-01 18:00:00+01:00
+        dtend: 2022-12-01 23:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Speciální 52. sraz PHP v Praze v LMC - panelová diskuze (feat. Fuckupy v IT)
+        description: 'Pražské srazy přátel PHP - Pehapkari.cz
+
+          Tuesday, October 25 at 6:00 PM
+
+
+          Zveme Vás na 52. sraz přátel PHP v Praze v nových prostorách našeho partnera **LMC** v **Dock in Five v Libni**. Tento sraz bude speciální! Mimo předn...
+
+
+          https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/288964390/'
+        location: LMC Ltd. (Menclova 2538/2, Praha 8-Libeň, Czech Republic 170 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288964390@meetup.com
+        url: https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/288964390/
+        dtstart: 2022-10-25 18:00:00+02:00
+        dtend: 2022-10-25 23:00:00+02:00
