--- a/data/sources/datascript-morning-talks.yaml
+++ b/data/sources/datascript-morning-talks.yaml
@@ -51941,3 +51941,27 @@ series:
         url: https://www.meetup.com/morning-talks/events/290691633/
         dtstart: 2023-02-16 09:00:00+01:00
         dtend: 2023-02-16 10:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Atlassian - Cloud či Data Centre, to je oč tu běží
+        description: 'Morning Talks
+
+          Thursday, February 16 at 9:00 AM
+
+
+          **Prosíme Vás o registraci přímo na stránkách Datascriptu:**https://www.datascript.cz/morning-talks/atlassian-cloud-ci-data-centre-to-je-oc-tu-bezi/ A...
+
+
+          https://www.meetup.com/morning-talks/events/290691633/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290691633@meetup.com
+        url: https://www.meetup.com/morning-talks/events/290691633/
+        dtstart: 2023-02-16 09:00:00+01:00
+        dtend: 2023-02-16 10:00:00+01:00
