--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -39308,12 +39308,9 @@ series:
         dtstart: 2023-02-14 09:30:00+01:00
         dtend: 2023-02-14 12:30:00+01:00
   - meetupcom:
-      meta_description: 'Our UX Association has become the **Community Partner for ProductWorld 2023**.
-
-
-        As a gesture of thanks, the ProductWorld team has offered our group **25 free OPEN Passes an'
-      og_title: Free OPEN Passes to ProductWorld 2023, Tue, Feb 21, 2023, 6:00 PM   | Meetup
-      url: https://www.meetup.com/asociace-ux/events/291343276/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Free OPEN Passes to ProductWorld 2023
         description: 'Asociace UX
