--- a/data/sources/pragueaws.yaml
+++ b/data/sources/pragueaws.yaml
@@ -53937,3 +53937,57 @@ series:
         url: https://www.meetup.com/prague-aws-meetup/events/275297097/
         dtstart: 2021-01-13 18:00:00+01:00
         dtend: 2021-01-13 19:00:00+01:00
+  - meetupcom:
+      meta_description: 'We would like to invite you for next Prague AWS User Group Community Meetup to Ataccama.
+
+
+        There will be two speakers with the following presentations:
+
+
+        * **AWS Cloud WAN - '
+      og_title: Regular Prague AWS User Group Meetup, Thu, Mar 9, 2023, 6:00 PM   | Meetup
+      url: https://www.meetup.com/prague-aws-meetup/events/291816432/
+      ical:
+        summary: Regular Prague AWS User Group Meetup
+        description: 'Prague AWS User Group
+
+          Thursday, March 9 at 6:00 PM
+
+
+          We would like to invite you for next Prague AWS User Group Community Meetup to Ataccama. There will be two speakers with the following presentations: ...
+
+
+          https://www.meetup.com/prague-aws-meetup/events/291816432/'
+        location: Ataccama Software, s.r.o. (Invalidovna, Praha 8, Czech Republic 186 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_291816432@meetup.com
+        url: https://www.meetup.com/prague-aws-meetup/events/291816432/
+        dtstart: 2023-03-09 18:00:00+01:00
+        dtend: 2023-03-09 20:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Regular Prague AWS User Group Meetup
+        description: 'Prague AWS User Group
+
+          Tuesday, December 13 at 6:00 PM
+
+
+          We would like to invite you for next Prague AWS User Group Community Meetup to Ataccama. There will be two speakers with the following presentations: ...
+
+
+          https://www.meetup.com/prague-aws-meetup/events/289253635/'
+        location: Ataccama Software, s.r.o. (Invalidovna, Praha 8, Czech Republic 186 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289253635@meetup.com
+        url: https://www.meetup.com/prague-aws-meetup/events/289253635/
+        dtstart: 2022-12-13 18:00:00+01:00
+        dtend: 2022-12-13 20:00:00+01:00
