--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -39562,9 +39562,9 @@ series:
         dtstart: 2023-01-26 17:30:00+01:00
         dtend: 2023-01-26 20:30:00+01:00
   - meetupcom:
-      meta_description: UX dinner is a meeting of the UX community in Brno. You can expect an informal dinner, discussing small design problems, an opportunity to find a mentor or a new project. W
-      og_title: UX Dinner Brno in February, Mon, Feb 27, 2023, 5:30 PM   | Meetup
-      url: https://www.meetup.com/asociace-ux/events/291419769/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: UX Dinner Brno in February
         description: 'Asociace UX
@@ -41022,3 +41022,74 @@ series:
         url: https://www.meetup.com/asociace-ux/events/291343276/
         dtstart: 2023-02-21 18:00:00+01:00
         dtend: 2023-02-21 23:59:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Free OPEN Passes to ProductWorld 2023
+        description: 'Asociace UX
+
+          Tuesday, February 21 at 6:00 PM
+
+
+          Our UX Association has become the **Community Partner for ProductWorld 2023**. As a gesture of thanks, the ProductWorld team has offered our group **2...
+
+
+          https://www.meetup.com/asociace-ux/events/291343276/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_291343276@meetup.com
+        url: https://www.meetup.com/asociace-ux/events/291343276/
+        dtstart: 2023-02-21 18:00:00+01:00
+        dtend: 2023-02-21 23:59:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Research Tuesday: Výzkum ve veřejném prostoru'
+        description: 'Asociace UX
+
+          Tuesday, February 14 at 9:30 AM
+
+
+          Research Tuesday jsou setkání, kde profesionálové z oboru uživatelského výzkumu sdílí svoje zkušenosti.Akci organizují Výzkumatky – Volné sdružení výz...
+
+
+          https://www.meetup.com/asociace-ux/events/291344547/'
+        location: The Forge – Kovárna Braník (Branická 26/43, , Hlavní město Praha, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_291344547@meetup.com
+        url: https://www.meetup.com/asociace-ux/events/291344547/
+        dtstart: 2023-02-14 09:30:00+01:00
+        dtend: 2023-02-14 12:30:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'UX Monday: Design Operations'
+        description: 'Asociace UX
+
+          Monday, February 6 at 6:00 PM
+
+
+          *V čem se nejvíce liší design proces v organizacích různých velikostí a typů? Očekává se od designérů v agenturách, bankách nebo startupech, že budou ...
+
+          \nhttps://www.meetup.com/asociace-ux/events/291287559/'
+        location: Na Valentince (Na Valentince, Praha 5-Smíchov, Czech Republic 150 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_291287559@meetup.com
+        url: https://www.meetup.com/asociace-ux/events/291287559/
+        dtstart: 2023-02-06 18:00:00+01:00
+        dtend: 2023-02-06 20:00:00+01:00
