--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -41093,3 +41093,54 @@ series:
         url: https://www.meetup.com/asociace-ux/events/291287559/
         dtstart: 2023-02-06 18:00:00+01:00
         dtend: 2023-02-06 20:00:00+01:00
+  - meetupcom:
+      meta_description: '*S radostí zveme všechny členy i nečleny Asociace UX na příští UX Monday, které bude unikátní hned v několika ohledech.*
+
+
+        Hybným tématem budou nadcházející **volby do správ'
+      og_title: 'UX Monday: Budoucnost Asociace UX aneb představení kandidátů, Mon, Mar 6, 2023, 6:00 PM   | Meetup'
+      url: https://www.meetup.com/asociace-ux/events/291919857/
+      ical:
+        summary: 'UX Monday: Budoucnost Asociace UX aneb představení kandidátů'
+        description: 'Asociace UX
+
+          Monday, March 6 at 6:00 PM
+
+
+          *S radostí zveme všechny členy i nečleny Asociace UX na příští UX Monday, které bude unikátní hned v několika ohledech.* Hybným tématem budou nadcháze...
+
+
+          https://www.meetup.com/asociace-ux/events/291919857/'
+        location: Salsita Club (Štefánikova 25, Praha 5-Smíchov, Czech Republic 150 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_291919857@meetup.com
+        url: https://www.meetup.com/asociace-ux/events/291919857/
+        dtstart: 2023-03-06 18:00:00+01:00
+        dtend: 2023-03-06 20:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: UX Dinner Brno in February
+        description: 'Asociace UX
+
+          Monday, February 27 at 5:30 PM
+
+
+          UX dinner is a meeting of the UX community in Brno. You can expect an informal dinner, discussing small design problems, an opportunity to find a ment...
+
+
+          https://www.meetup.com/asociace-ux/events/291419769/'
+        location: EFI SPA HOTEL (nám. 28. října 1903/23, Brno-Brno-střed, Czech Republic 602 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_291419769@meetup.com
+        url: https://www.meetup.com/asociace-ux/events/291419769/
+        dtstart: 2023-02-27 17:30:00+01:00
+        dtend: 2023-02-27 20:30:00+01:00
