--- a/data/sources/pyvo-praha.yaml
+++ b/data/sources/pyvo-praha.yaml
@@ -18994,17 +18994,17 @@ series:
         dtstart: 2023-01-18 19:00:00+01:00
         dtend: 2023-01-18 23:59:00+01:00
   - meetupcom:
-      meta_description: We will meet for an informal chat about Python, programming, and more. Details will be added.
-      og_title: 'Pyvo Prague #, Wed, Mar 15, 2023, 7:00 PM   | Meetup'
+      meta_description: We meet up at 19 at Klub Na Věnečku, presentations start at 19.30. You can look forward to two presentations, lightning talks and chit-chat until early morning. You can hav
+      og_title: 'Pyvo Prague #142: GraalPy & HPy i Práce se Stresem, Wed, Mar 15, 2023, 7:00 PM   | Meetup'
       url: https://www.meetup.com/pyvo-prague-python-meetup/events/rrlcctyfcfbtb/
       ical:
-        summary: 'Pyvo Prague #'
+        summary: 'Pyvo Prague #142: GraalPy & HPy i Práce se Stresem'
         description: 'Pyvo: Prague Python Meetup
 
           Wednesday, March 15 at 7:00 PM
 
 
-          We will meet for an informal chat about Python, programming, and more. Details will be added.
+          We meet up at 19 at Klub Na Věnečku, presentations start at 19.30. You can look forward to two presentations, lightning talks and chit-chat until earl...
 
 
           https://www.meetup.com/pyvo-prague-python-meetup/events/291655272/'
@@ -19712,6 +19712,30 @@ series:
         url: https://www.meetup.com/pyvo-prague-python-meetup/events/rrlcctyfcjbcc/
         dtstart: 2023-06-21 19:00:00+02:00
         dtend: 2023-06-21 23:59:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Pyvo Prague #141 - Asyncio, Tech interview, Lunch break problem'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, February 15 at 7:00 PM
+
+
+          We organize Pyvo in February as well! We meet up at 19 at Klub Na Věnečku, presentations start at 19.30. You can look forward to 3 presentations, ligh...
+
+
+          https://www.meetup.com/pyvo-prague-python-meetup/events/291145780/'
+        location: Klub Na Věnečku (Ostrovského 38a, Praha 5, Czech Republic 150 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_bcxlssyfcdbtb@meetup.com
+        url: https://www.meetup.com/pyvo-prague-python-meetup/events/291145780/
+        dtstart: 2023-02-15 19:00:00+01:00
+        dtend: 2023-02-15 23:59:00+01:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
