--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -41384,3 +41384,51 @@ series:
         url: https://www.meetup.com/asociace-ux/events/291419769/
         dtstart: 2023-02-27 17:30:00+01:00
         dtend: 2023-02-27 20:30:00+01:00
+  - meetupcom:
+      meta_description: UX dinner is a meeting of the UX community in Brno. You can expect a short presentation by [Gabriela Véghová](https://www.linkedin.com/in/ACoAAAsUgb4BEZaMbwaV0wdnhgsO5svOld
+      og_title: UX Dinner Brno in March , Mon, Mar 27, 2023, 5:30 PM   | Meetup
+      url: https://www.meetup.com/asociace-ux/events/292005028/
+      ical:
+        summary: 'UX Dinner Brno in March '
+        description: 'Asociace UX
+
+          Monday, March 27 at 5:30 PM
+
+
+          UX dinner is a meeting of the UX community in Brno. You can expect a short presentation by (https://www.linkedin.com/in/ACoAAAsUgb4BEZaMbwaV0wdnhgsO5s...
+
+
+          https://www.meetup.com/asociace-ux/events/292005028/'
+        location: Stopkova Plzeňská Pivnice (Česká 163, Brno-Brno-střed, Czech Republic 602 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_292005028@meetup.com
+        url: https://www.meetup.com/asociace-ux/events/292005028/
+        dtstart: 2023-03-27 17:30:00+02:00
+        dtend: 2023-03-27 20:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: UX Dinner Brno in February
+        description: 'Asociace UX
+
+          Monday, February 27 at 5:30 PM
+
+
+          UX dinner is a meeting of the UX community in Brno. You can expect an informal dinner, discussing small design problems, an opportunity to find a ment...
+
+
+          https://www.meetup.com/asociace-ux/events/291419769/'
+        location: EFI SPA HOTEL (nám. 28. října 1903/23, Brno-Brno-střed, Czech Republic 602 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_291419769@meetup.com
+        url: https://www.meetup.com/asociace-ux/events/291419769/
+        dtstart: 2023-02-27 17:30:00+01:00
+        dtend: 2023-02-27 20:30:00+01:00
